--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 	<head>
 		<meta charset="UTF-8" />
 		<link
@@ -8,7 +8,7 @@
 			href="/src/assets/icons/favicon.svg"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
+		<title>Github Finder</title>
 	</head>
 	<body>
 		<div id="root"></div>
